[package]
authors = ["Jimmy Cuadra <jimmy@jimmycuadra.com>", "Sam Rijs <srijs@airpost.net>"]
description = "Utilities for retrying operations that can fail."
documentation = "https://docs.rs/retry"
edition = "2018"
homepage = "https://github.com/jimmycuadra/retry"
keywords = ["utility", "utilities"]
license = "MIT"
name = "retry"
readme = "README.md"
repository = "https://github.com/jimmycuadra/retry"
version = "1.0.0"

[dependencies]
rand = "0.7.3"
tokio = { version = "0.2.11", features = ["time"], optional = true }

[dev-dependencies]
tokio = { version = "0.2.11", features = ["macros", "rt-threaded"] }
futures = "0.3.1"

[features]
default = []
asynchronous = ["tokio"]
